prepare backend for deployment